--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "~4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "immutable": "^3.8.2",
+    "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.4.2",
