--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "1.15.0",
     "express": "~4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
+    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "prop-types": "^15.6.0",
     "react": "^15.4.2",
